--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,5 +7,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      NODE_ENV: development
     ports:
-        - 8080:8080
+      - 8080:8080
+      - 5858:5858
+    volumes:
+      - .:/usr/src/app
+    command: node --debug=5858 server.js
