--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+    environment:
+      NODE_ENV: production
     ports:
       - 8080:8080
